test loop fixed

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 /venv
 /Dataset/asl_alphabet_train
 /Dataset/asl_alphabet_test
-requirments.txt
-test.ipynb
+/requirments.txt
+/test.ipynb
+/main.py
